--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,16 @@
 
     <style>
       /* custom css code goes below here */
+      
+      body {
+        background-color: black; 
+        color: white;
+      }
 
+      h1{
+        font-family: "FONT NAME HERE" ; 
+
+      }
 
 
     </style>
@@ -60,10 +69,10 @@
 
 
     <!-- main banner -->
-    <header role="banner" class="vh-100 d-flex flex-column align-items-center justify-content-center">
+    <header role="banner" class="py-5">
 
-      <h1 class="text-center display-1" data-0-center-center="opacity:1;" data-0-top-top="opacity:0;">Hello World</h1>
-      <p class="lead">Something something</p>
+      <h1 class="text-center display-1" >Hello World</h1>
+      <p class="lead text-center">Something something</p>
 
     </header>
 
@@ -75,12 +84,21 @@
       <div class="container mt-5">
 
         <!-- article header -->
-        <header class="my-5 row justify-content-center">
-          <div class="col-12 col-md-10 text-center">
-            <h2>Governments have widely varying policies towards journalists</h2>
-            <p class="small pt-5">By Name Here</p>
+        <div class="row justify-content-center">
+          <div class="col-3">
+            <video src="assets/video1.mp4" autoplay playsinline muted preload width="100%" height="auto"></video>
           </div>
-        </header>
+          <div class="col-3">
+            <video src="assets/video2.mp4" autoplay playsinline muted preload width="100%" height="auto"></video>
+          </div>
+          <div class="col-3">
+            <video src="assets/video3.mp4" autoplay playsinline muted preload width="100%" height="auto"></video>
+          </div>
+          <div class="col-3">
+            <video src="assets/video4.mp4" autoplay playsinline muted preload width="100%" height="auto"></video>
+          </div>
+
+        </div>
 
 
         <div class="row justify-content-center">
