--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,8 @@
     <!-- main banner -->
     <header role="banner" class="py-5">
 
-      <h1 class="text-center display-1" >Hello World</h1>
+      <h1 class="text-center display-1" >Hi Deena
+      </h1>
       <p class="lead text-center">Something something</p>
 
     </header>
