--- a/src/index.html
+++ b/src/index.html
@@ -55,10 +55,31 @@
         color: white;
       }
 
-      h1{
-        font-family: "FONT NAME HERE" ; 
-
+      .text-center{
+        font-size: 60px;
+        font-family: 'Roboto', sans-serif;
       }
+
+      .lead{
+        color: #69C9D0;
+        font-size: 20px;
+        padding-bottom: 0px;
+      }
+
+      .stroke{
+        width: 900px;
+        height: auto;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+
+      .col-3{
+       padding-bottom: 50px; 
+      }
+
+      
 
 
     </style>
@@ -71,11 +92,13 @@
     <!-- main banner -->
     <header role="banner" class="py-5">
 
-      <h1 class="text-center display-1" >Hi Deena
+      <h1 class="text-center display-1" >MEMEING A PANDEMIC
       </h1>
-      <p class="lead text-center">Something something</p>
+      <p class="lead text-center">How have young people been coping with the spread of Covid-19?</p>
 
     </header>
+
+    <img class="stroke" src="assets/stroke1.png">
 
 
 
@@ -87,16 +110,16 @@
         <!-- article header -->
         <div class="row justify-content-center">
           <div class="col-3">
-            <video src="assets/video1.mp4" autoplay playsinline muted preload width="100%" height="auto"></video>
+            <video src="assets/video1.mp4" autoplay loop="true" playsinline muted preload width="100%" height="auto"></video>
           </div>
           <div class="col-3">
-            <video src="assets/video2.mp4" autoplay playsinline muted preload width="100%" height="auto"></video>
+            <video src="assets/video2.mp4" autoplay loop="true" playsinline muted preload width="100%" height="auto"></video>
           </div>
           <div class="col-3">
-            <video src="assets/video3.mp4" autoplay playsinline muted preload width="100%" height="auto"></video>
+            <video src="assets/video3.mp4" autoplay loop="true" playsinline muted preload width="100%" height="auto"></video>
           </div>
           <div class="col-3">
-            <video src="assets/video4.mp4" autoplay playsinline muted preload width="100%" height="auto"></video>
+            <video src="assets/video4.mp4" autoplay loop="true" playsinline muted preload width="100%" height="auto"></video>
           </div>
 
         </div>
@@ -105,7 +128,7 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-8 col-lg-6">
 
-            <p>Such a code of conduct can, in the real world, be difficult to uphold consistently. Reporting and editing do not occur in a vacuum but always reflect the political context in which journalists, no less than other citizens, operate.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             
 
             <!-- Example of a video embed -->
@@ -117,7 +140,7 @@
             </div>
 
 
-            <p>A news organization's budget inevitably reflects decision-making about what news to cover, for what audience, and in what depth. When budgets are cut, editors may sacrifice reporters in distant news bureaus, reduce the number of staff assigned to low-income areas, or wipe entire communities from the publication's zone of interest.</p>
+            <p>Nec ullamcorper sit amet risus nullam eget felis eget. Ac placerat vestibulum lectus mauris ultrices eros. Congue nisi vitae suscipit tellus mauris a. Fermentum odio eu feugiat pretium nibh. Est ante in nibh mauris cursus mattis molestie a iaculis. Pharetra diam sit amet nisl suscipit adipiscing bibendum. Sed cras ornare arcu dui. Lobortis mattis aliquam faucibus purus in massa tempor nec feugiat. Nam libero justo laoreet sit amet cursus. Ac tortor dignissim convallis aenean et tortor at. Aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Nulla facilisi morbi tempus iaculis urna id volutpat. Mauris sit amet massa vitae. Eget nunc lobortis mattis aliquam faucibus purus in massa. Magna eget est lorem ipsum dolor sit. Enim eu turpis egestas pretium aenean.</p>
 
 
             <!-- Example of a YouTube Embed -->
@@ -126,7 +149,7 @@
             </div>
 
 
-            <p>Publishers, owners and other corporate executives, especially advertising sales executives, could try to use their powers over journalists to influence how news is reported and published. For this reason, journalists traditionally relied on top management to create and maintain a "firewall" between the news and other departments in a news organization to prevent undue influence on the news department.</p>
+            <p>Dolor purus non enim praesent elementum facilisis leo. Euismod in pellentesque massa placerat duis ultricies lacus sed turpis. Non blandit massa enim nec dui. Maecenas pharetra convallis posuere morbi leo urna. Tempor id eu nisl nunc mi ipsum faucibus vitae aliquet. Pharetra massa massa ultricies mi. Placerat orci nulla pellentesque dignissim enim sit amet venenatis urna. Phasellus egestas tellus rutrum tellus pellentesque eu. Amet commodo nulla facilisi nullam. Purus in mollis nunc sed id semper risus. Congue quisque egestas diam in arcu. Et sollicitudin ac orci phasellus egestas tellus.</p>
 
 
             <!-- Example of audio player -->
@@ -135,19 +158,13 @@
             </audio>
 
 
-            <p>There are over 242 codes of ethics in journalism that vary across various regions of the world.</p>
+            <p>Cras fermentum odio eu feugiat pretium nibh ipsum. Dictum non consectetur a erat nam at lectus urna. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Proin nibh nisl condimentum id venenatis a condimentum vitae sapien. Quisque sagittis purus sit amet. Commodo viverra maecenas accumsan lacus vel facilisis. Dignissim convallis aenean et tortor at risus. Imperdiet massa tincidunt nunc pulvinar sapien et ligula. Leo duis ut diam quam nulla porttitor. Urna porttitor rhoncus dolor purus non enim praesent elementum. Dignissim suspendisse in est ante in. In massa tempor nec feugiat nisl pretium fusce.</p>
 
-            <p>Governments have widely varying policies and practices towards journalists, which control what they can research and write, and what press organizations can publish. Some governments guarantee the freedom of the press; while other nations severely restrict what journalists can research or publish.</p>
+            <p>Vel risus commodo viverra maecenas. Ipsum dolor sit amet consectetur adipiscing elit duis. Justo donec enim diam vulputate. Ultricies integer quis auctor elit sed vulputate mi. Turpis egestas sed tempus urna et pharetra pharetra massa. Nunc congue nisi vitae suscipit tellus mauris. Nunc congue nisi vitae suscipit tellus mauris a. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Aliquet risus feugiat in ante metus dictum at. Id neque aliquam vestibulum morbi blandit cursus risus. Tortor posuere ac ut consequat semper viverra nam libero. Lobortis elementum nibh tellus molestie nunc non blandit. Tempor orci dapibus ultrices in iaculis nunc sed. Turpis massa sed elementum tempus egestas. Sit amet tellus cras adipiscing enim eu turpis egestas. Nunc congue nisi vitae suscipit tellus mauris a diam. Tincidunt praesent semper feugiat nibh sed pulvinar proin.</p>
 
-            <p>Journalists in many nations have some privileges that members of the general public do not, including better access to public events, crime scenes and press conferences, and to extended interviews with public officials, celebrities and others in the public eye.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac turpis. In fermentum posuere urna nec tincidunt. Consequat nisl vel pretium lectus quam. Facilisis gravida neque convallis a cras semper auctor neque. Tellus in hac habitasse platea dictumst vestibulum rhoncus est pellentesque. Sed arcu non odio euismod lacinia. Neque vitae tempus quam pellentesque nec nam aliquam sem et. Tincidunt augue interdum velit euismod in pellentesque massa. Auctor augue mauris augue neque gravida. Eros donec ac odio tempor orci. Faucibus interdum posuere lorem ipsum dolor sit amet consectetur adipiscing. In ornare quam viverra orci sagittis eu volutpat odio. Risus nec feugiat in fermentum posuere urna. Neque ornare aenean euismod elementum. Ipsum a arcu cursus vitae. Curabitur vitae nunc sed velit dignissim sodales ut.</p>
 
-            <p>Journalists who elect to cover conflicts, whether wars between nations or insurgencies within nations, often give up any expectation of protection by government, if not giving up their rights to protection from the government. Journalists who are captured or detained during a conflict are expected to be treated as civilians and to be released to their national government. Many governments around the world target journalists for intimidation, harassment, and violence because of the nature of their work.</p>
-
-            <p>Journalists' interaction with sources sometimes involves confidentiality, an extension of freedom of the press giving journalists a legal protection to keep the identity of a confidential informant private even when demanded by police or prosecutors; withholding their sources can land journalists in contempt of court, or in jail.</p>
-
-            <p>Journalism is the production and distribution of reports on events. The word journalism applies to the occupation, as well as citizen journalists who gather and publish information. Journalistic media include print, television, radio, Internet, and, in the past, newsreels.</p>
-
-            <p>Concepts of the appropriate role for journalism vary between countries. In some nations, the news media are controlled by government intervention and are not fully independent. In others, the news media are independent of the government but instead operate as private industry motivated by profit. In addition to the varying nature of how media organizations are run and funded, countries may have differing implementations of laws handling the freedom of speech and libel cases.</p>
+            <p>Nec ullamcorper sit amet risus nullam eget felis eget. Ac placerat vestibulum lectus mauris ultrices eros. Congue nisi vitae suscipit tellus mauris a. Fermentum odio eu feugiat pretium nibh. Est ante in nibh mauris cursus mattis molestie a iaculis. Pharetra diam sit amet nisl suscipit adipiscing bibendum. Sed cras ornare arcu dui. Lobortis mattis aliquam faucibus purus in massa tempor nec feugiat. Nam libero justo laoreet sit amet cursus. Ac tortor dignissim convallis aenean et tortor at. Aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Nulla facilisi morbi tempus iaculis urna id volutpat. Mauris sit amet massa vitae. Eget nunc lobortis mattis aliquam faucibus purus in massa. Magna eget est lorem ipsum dolor sit. Enim eu turpis egestas pretium aenean.</p>
 
           </div>
         </div>
@@ -222,7 +239,7 @@
     <div class="container-fluid">
       <footer role="contentinfo" class="row justify-content-center mt-5 bg-dark text-light text-center">
         <header class="col-8 py-5">
-          <p>This is a project by a student at the UC Berkeley Graduate School of Journalism</p>
+          <p>This is a project by Chloe Renyolds and Deena Sabry at the UC Berkeley Graduate School of Journalism</p>
         </header>
       </footer>
     </div>
