--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
 
 
     <!-- main banner -->
-    <header role="banner" class="py-5">
+    <header role="banner" class="pt-5">
 
       <h1 id="headline" class="text-center display-1" > MEMEING A PANDEMIC
       </h1>
