--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     }
     </script>
 
+ <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
     <!-- Twitter Summary Card -->
@@ -157,7 +158,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://media.journalism.berkeley.edu/upload/2020/05/1588749566d5dc5f6.jpeg" class="d-block w-100" alt="...">
+      <blockquote class="twitter-tweet d-block w-100" data-dnt="true" data-theme="dark"><p lang="und" dir="ltr"><a href="https://t.co/zzpCevKhQJ">pic.twitter.com/zzpCevKhQJ</a></p>&mdash; buzzfeed unsolved without context (@bfunocontext) <a href="https://twitter.com/bfunocontext/status/1258144942762967041?ref_src=twsrc%5Etfw">May 6, 2020</a></blockquote> 
     </div>
     <div class="carousel-item">
       <img src="https://media.journalism.berkeley.edu/upload/2020/05/1588749618c9170bf.jpeg" class="d-block w-100" alt="...">
@@ -176,14 +177,22 @@
   </a>
 </div>
 
-            <p>Nec ullamcorper sit amet risus nullam eget felis eget. Ac placerat vestibulum lectus mauris ultrices eros. Congue nisi vitae suscipit tellus mauris a. Fermentum odio eu feugiat pretium nibh. Est ante in nibh mauris cursus mattis molestie a iaculis. Pharetra diam sit amet nisl suscipit adipiscing bibendum. Sed cras ornare arcu dui. Lobortis mattis aliquam faucibus purus in massa tempor nec feugiat. Nam libero justo laoreet sit amet cursus. Ac tortor dignissim convallis aenean et tortor at. Aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Nulla facilisi morbi tempus iaculis urna id volutpat. Mauris sit amet massa vitae. Eget nunc lobortis mattis aliquam faucibus purus in massa. Magna eget est lorem ipsum dolor sit. Enim eu turpis egestas pretium aenean.</p>
 
+
+
+            <p>Nec ullamcorper sit amet risus nullam eget felis eget. Ac placerat vestibulum lectus mauris ultrices eros. Congue nisi vitae suscipit tellus mauris a. Fermentum odio eu feugiat pretium nibh. Est ante in nibh mauris cursus mattis molestie a iaculis. Pharetra diam sit amet nisl suscipit adipiscing bibendum. Sed cras ornare arcu dui. Lobortis mattis aliquam faucibus purus in massa tempor nec feugiat. Nam libero justo laoreet sit amet cursus. Ac tortor dignissim convallis aenean et tortor at. Aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Nulla facilisi morbi tempus iaculis urna id volutpat. Mauris sit amet massa vitae. Eget nunc lobortis mattis aliquam faucibus purus in massa. Magna eget est lorem ipsum dolor sit. Enim eu turpis egestas pretium aenean.</p>
+</div>
+</div>
+<div class="row justify-content-center">
+          <div class="col-12 col-md-10 col-lg-10">
 
             <!-- Example of a YouTube Embed -->
             <div class="embed-responsive embed-responsive-16by9">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/lTUveqrIj6o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
+<div class="row justify-content-center">
+          <div class="col-12 col-md-8 col-lg-6">
 
             <p>Dolor purus non enim praesent elementum facilisis leo. Euismod in pellentesque massa placerat duis ultricies lacus sed turpis. Non blandit massa enim nec dui. Maecenas pharetra convallis posuere morbi leo urna. Tempor id eu nisl nunc mi ipsum faucibus vitae aliquet. Pharetra massa massa ultricies mi. Placerat orci nulla pellentesque dignissim enim sit amet venenatis urna. Phasellus egestas tellus rutrum tellus pellentesque eu. Amet commodo nulla facilisi nullam. Purus in mollis nunc sed id semper risus. Congue quisque egestas diam in arcu. Et sollicitudin ac orci phasellus egestas tellus.</p>
 
@@ -291,6 +300,11 @@
         //https://github.com/wilddeer/stickyfill
         var stickyElements = $('.sticky');
         Stickyfill.add(stickyElements);
+
+
+//javascript goes here!//
+
+
 
       });
     </script>
