--- a/src/index.html
+++ b/src/index.html
@@ -60,15 +60,15 @@
 
       #headline{
         font-size: 80px;
-        font-family: 'Libre Caslon Text', serif;
+        font-family: 'Crimson Text', serif;
         padding-top: 30px;
         padding-bottom: 10px;
         color: #69C9D0
       }
 
       #subhead{
-        font-size: 17px;
-        font-family: 'Raleway', sans-serif;
+        font-size: 20px;
+        font-family: 'Helvetica', sans-serif;
         font-weight: lighter;
         color: white;
       }
@@ -93,6 +93,8 @@
       .col-3{
        padding-bottom: 50px; 
       }
+
+
 
        @import 
        url('https://fonts.googleapis.com/css?family=IM+Fell+Double+Pica&display=swap');
@@ -146,7 +148,7 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-8 col-lg-6">
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p style="font-family: Helvetica,sans-serif;font-size: 18px;" class="pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             
 
             <!-- Example of a video embed -->
@@ -176,11 +178,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-
-
-
-
-            <p>Nec ullamcorper sit amet risus nullam eget felis eget. Ac placerat vestibulum lectus mauris ultrices eros. Congue nisi vitae suscipit tellus mauris a. Fermentum odio eu feugiat pretium nibh. Est ante in nibh mauris cursus mattis molestie a iaculis. Pharetra diam sit amet nisl suscipit adipiscing bibendum. Sed cras ornare arcu dui. Lobortis mattis aliquam faucibus purus in massa tempor nec feugiat. Nam libero justo laoreet sit amet cursus. Ac tortor dignissim convallis aenean et tortor at. Aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Nulla facilisi morbi tempus iaculis urna id volutpat. Mauris sit amet massa vitae. Eget nunc lobortis mattis aliquam faucibus purus in massa. Magna eget est lorem ipsum dolor sit. Enim eu turpis egestas pretium aenean.</p>
+            <p style="font-family: Helvetica,sans-serif;font-size: 18px;" class="pt-3">Nec ullamcorper sit amet risus nullam eget felis eget. Ac placerat vestibulum lectus mauris ultrices eros. Congue nisi vitae suscipit tellus mauris a. Fermentum odio eu feugiat pretium nibh. Est ante in nibh mauris cursus mattis molestie a iaculis. Pharetra diam sit amet nisl suscipit adipiscing bibendum. Sed cras ornare arcu dui. Lobortis mattis aliquam faucibus purus in massa tempor nec feugiat. Nam libero justo laoreet sit amet cursus. Ac tortor dignissim convallis aenean et tortor at. Aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Nulla facilisi morbi tempus iaculis urna id volutpat. Mauris sit amet massa vitae. Eget nunc lobortis mattis aliquam faucibus purus in massa. Magna eget est lorem ipsum dolor sit. Enim eu turpis egestas pretium aenean.</p>
 </div>
 </div>
 <div class="row justify-content-center">
@@ -194,84 +192,52 @@
 <div class="row justify-content-center">
           <div class="col-12 col-md-8 col-lg-6">
 
-            <p>Dolor purus non enim praesent elementum facilisis leo. Euismod in pellentesque massa placerat duis ultricies lacus sed turpis. Non blandit massa enim nec dui. Maecenas pharetra convallis posuere morbi leo urna. Tempor id eu nisl nunc mi ipsum faucibus vitae aliquet. Pharetra massa massa ultricies mi. Placerat orci nulla pellentesque dignissim enim sit amet venenatis urna. Phasellus egestas tellus rutrum tellus pellentesque eu. Amet commodo nulla facilisi nullam. Purus in mollis nunc sed id semper risus. Congue quisque egestas diam in arcu. Et sollicitudin ac orci phasellus egestas tellus.</p>
+            <p style="font-family: Helvetica,sans-serif;font-size: 18px;" class="pt-3">Dolor purus non enim praesent elementum facilisis leo. Euismod in pellentesque massa placerat duis ultricies lacus sed turpis. Non blandit massa enim nec dui. Maecenas pharetra convallis posuere morbi leo urna. Tempor id eu nisl nunc mi ipsum faucibus vitae aliquet. Pharetra massa massa ultricies mi. Placerat orci nulla pellentesque dignissim enim sit amet venenatis urna. Phasellus egestas tellus rutrum tellus pellentesque eu. Amet commodo nulla facilisi nullam. Purus in mollis nunc sed id semper risus. Congue quisque egestas diam in arcu. Et sollicitudin ac orci phasellus egestas tellus.</p>
 
 
            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">You are cordially invited! <a href="https://t.co/35TUevbGG6">pic.twitter.com/35TUevbGG6</a></p>&mdash; Nana Kwame (@TheAbrahamAsare) <a href="https://twitter.com/TheAbrahamAsare/status/1239251048172142592?ref_src=twsrc%5Etfw">March 15, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
-            <p>Cras fermentum odio eu feugiat pretium nibh ipsum. Dictum non consectetur a erat nam at lectus urna. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Proin nibh nisl condimentum id venenatis a condimentum vitae sapien. Quisque sagittis purus sit amet. Commodo viverra maecenas accumsan lacus vel facilisis. Dignissim convallis aenean et tortor at risus. Imperdiet massa tincidunt nunc pulvinar sapien et ligula. Leo duis ut diam quam nulla porttitor. Urna porttitor rhoncus dolor purus non enim praesent elementum. Dignissim suspendisse in est ante in. In massa tempor nec feugiat nisl pretium fusce.</p>
+            <p style="font-family: Helvetica,sans-serif;font-size: 18px;" class="pt-3">Cras fermentum odio eu feugiat pretium nibh ipsum. Dictum non consectetur a erat nam at lectus urna. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Proin nibh nisl condimentum id venenatis a condimentum vitae sapien. Quisque sagittis purus sit amet. Commodo viverra maecenas accumsan lacus vel facilisis. Dignissim convallis aenean et tortor at risus. Imperdiet massa tincidunt nunc pulvinar sapien et ligula. Leo duis ut diam quam nulla porttitor. Urna porttitor rhoncus dolor purus non enim praesent elementum. Dignissim suspendisse in est ante in. In massa tempor nec feugiat nisl pretium fusce.</p>
 
-            <p>Vel risus commodo viverra maecenas. Ipsum dolor sit amet consectetur adipiscing elit duis. Justo donec enim diam vulputate. Ultricies integer quis auctor elit sed vulputate mi. Turpis egestas sed tempus urna et pharetra pharetra massa. Nunc congue nisi vitae suscipit tellus mauris. Nunc congue nisi vitae suscipit tellus mauris a. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Aliquet risus feugiat in ante metus dictum at. Id neque aliquam vestibulum morbi blandit cursus risus. Tortor posuere ac ut consequat semper viverra nam libero. Lobortis elementum nibh tellus molestie nunc non blandit. Tempor orci dapibus ultrices in iaculis nunc sed. Turpis massa sed elementum tempus egestas. Sit amet tellus cras adipiscing enim eu turpis egestas. Nunc congue nisi vitae suscipit tellus mauris a diam. Tincidunt praesent semper feugiat nibh sed pulvinar proin.</p>
+            <p style="font-family: Helvetica,sans-serif;font-size: 18px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac turpis. In fermentum posuere urna nec tincidunt. Consequat nisl vel pretium lectus quam. Facilisis gravida neque convallis a cras semper auctor neque. Tellus in hac habitasse platea dictumst vestibulum rhoncus est pellentesque. Sed arcu non odio euismod lacinia. Neque vitae tempus quam pellentesque nec nam aliquam sem et.</p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac turpis. In fermentum posuere urna nec tincidunt. Consequat nisl vel pretium lectus quam. Facilisis gravida neque convallis a cras semper auctor neque. Tellus in hac habitasse platea dictumst vestibulum rhoncus est pellentesque. Sed arcu non odio euismod lacinia. Neque vitae tempus quam pellentesque nec nam aliquam sem et. Tincidunt augue interdum velit euismod in pellentesque massa. Auctor augue mauris augue neque gravida. Eros donec ac odio tempor orci. Faucibus interdum posuere lorem ipsum dolor sit amet consectetur adipiscing. In ornare quam viverra orci sagittis eu volutpat odio. Risus nec feugiat in fermentum posuere urna. Neque ornare aenean euismod elementum. Ipsum a arcu cursus vitae. Curabitur vitae nunc sed velit dignissim sodales ut.</p>
-
-            <p>Nec ullamcorper sit amet risus nullam eget felis eget. Ac placerat vestibulum lectus mauris ultrices eros. Congue nisi vitae suscipit tellus mauris a. Fermentum odio eu feugiat pretium nibh. Est ante in nibh mauris cursus mattis molestie a iaculis. Pharetra diam sit amet nisl suscipit adipiscing bibendum. Sed cras ornare arcu dui. Lobortis mattis aliquam faucibus purus in massa tempor nec feugiat. Nam libero justo laoreet sit amet cursus. Ac tortor dignissim convallis aenean et tortor at. Aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Nulla facilisi morbi tempus iaculis urna id volutpat. Mauris sit amet massa vitae. Eget nunc lobortis mattis aliquam faucibus purus in massa. Magna eget est lorem ipsum dolor sit. Enim eu turpis egestas pretium aenean.</p>
+            <p style="font-family: Helvetica,sans-serif;font-size: 18px;">Nec ullamcorper sit amet risus nullam eget felis eget. Ac placerat vestibulum lectus mauris ultrices eros. Congue nisi vitae suscipit tellus mauris a. Fermentum odio eu feugiat pretium nibh. Est ante in nibh mauris cursus mattis molestie a iaculis. Pharetra diam sit amet nisl suscipit adipiscing bibendum. Sed cras ornare arcu dui. Lobortis mattis aliquam faucibus purus in massa tempor nec feugiat. Nam libero justo laoreet sit amet cursus. Ac tortor dignissim convallis aenean et tortor at. Aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Nulla facilisi morbi tempus iaculis urna id volutpat. Mauris sit amet massa vitae. Eget nunc lobortis mattis aliquam faucibus purus in massa. Magna eget est lorem ipsum dolor sit. Enim eu turpis egestas pretium aenean.</p>
 
           </div>
         </div>
 
-        <figure class="figure">
-          <img src="http://placehold.it/2000x1200" alt="Placeholder" class="img-fluid d-block">
-          <figcaption class="figure-caption">Here is a caption for this image</figcaption>
-        </figure>
+         <div class="row justify-content-center">
+          <div class="col-3">
+            <video src="assets/video8.mp4" autoplay loop="true" playsinline muted preload width="100%" height="auto"></video>
+          </div>
+          <div class="col-3">
+            <video src="assets/video9.mp4" autoplay loop="true" playsinline muted preload width="100%" height="auto"></video>
+          </div>
+          <div class="col-3">
+            <video src="assets/video13.mp4" autoplay loop="true" playsinline muted preload width="100%" height="auto"></video>
+          </div>
+          <div class="col-3">
+            <video src="assets/video11.mp4" autoplay loop="true" playsinline muted preload width="100%" height="auto"></video>
+          </div>
+
+        </div>
+
 
         <div class="row justify-content-center">
           <div class="col-12 col-md-8 col-lg-6">
 
-            <p>Journalistic conventions vary by country. In the United States, journalism is produced by media organizations or by individuals. Bloggers are often, but not always, journalists. The Federal Trade Commission requires that bloggers who write about products received as promotional gifts to disclose that they received the products for free. This is intended to eliminate conflicts of interest and protect consumers.</p>
+            <p style="font-family: Helvetica,sans-serif;font-size: 18px;">Vel risus commodo viverra maecenas. Ipsum dolor sit amet consectetur adipiscing elit duis. Justo donec enim diam vulputate. Ultricies integer quis auctor elit sed vulputate mi. Turpis egestas sed tempus urna et pharetra pharetra massa. Nunc congue nisi vitae suscipit tellus mauris. Nunc congue nisi vitae suscipit tellus mauris a. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Aliquet risus feugiat in ante metus dictum at. Id neque aliquam vestibulum morbi blandit cursus risus. Tortor posuere ac ut consequat semper viverra nam libero. Lobortis elementum nibh tellus molestie nunc non blandit. Tempor orci dapibus ultrices in iaculis nunc sed. Turpis massa sed elementum tempus egestas. Sit amet tellus cras adipiscing enim eu turpis egestas. Nunc congue nisi vitae suscipit tellus mauris a diam. Tincidunt praesent semper feugiat nibh sed pulvinar proin.</p>
 
-            <p>According to Robert McChesney, healthy journalism in a democratic country must provide an opinion of people in power and who wish to be in power, must include a range of opinions and must regard the informational needs of all people.</p>
+            <p style="font-family: Helvetica,sans-serif;font-size: 18px;">Nec ullamcorper sit amet risus nullam eget felis eget. Ac placerat vestibulum lectus mauris ultrices eros. Congue nisi vitae suscipit tellus mauris a. Fermentum odio eu feugiat pretium nibh. Est ante in nibh mauris cursus mattis molestie a iaculis. Pharetra diam sit amet nisl suscipit adipiscing bibendum. Sed cras ornare arcu dui. Lobortis mattis aliquam faucibus purus in massa tempor nec feugiat.</p> 
 
-            <p>There are several forms of journalism with diverse audiences. Thus, journalism is said to serve the role of a "fourth estate", acting as a watchdog on the workings of the government. A single publication (such as a newspaper) contains many forms of journalism, each of which may be presented in different formats. Each section of a newspaper, magazine, or website may cater to a different audience.</p>
-
-            <p>Consequently, this has resulted in arguments to reconsider journalism as a process distributed among many authors, including the socially mediating public, rather than as individual products and articles written by dedicated journalists.</p>
-
-            <p>Because of these changes, the credibility ratings of news outlets has reached an all-time low. A 2014 study revealed that only 22% of Americans reported a "great deal" or "quite a lot of confidence" in either television news or newspapers.</p>
             
           </div>
         </div>
 
 
-        <!-- Example of a Bootstrap Carousel -->
-
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="http://placehold.it/2000x1200" class="d-block w-100" alt="Person interviewing">
-            </div>
-            <div class="carousel-item">
-              <img  src="http://placehold.it/2000x1200" class="d-block w-100" alt="Person reading a newspaper">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
 
 
-
-        <div class="row justify-content-center mt-4">
-          <div class="col-12 col-md-8 col-lg-6">
-            <p>It's clear now that we didn't do enough to prevent these tools from being used for harm as well. That goes for fake news, foreign interference in elections, and hate speech, as well as developers and data privacy.</p>
-
-            <p>The phrase was popularized and inaccurately used by Donald Trump during his presidential campaign to discredit what he perceived as negative news coverage of his candidacy and then the presidency.</p>
-
-            <p>While publications reporting the news to the general public in a standardized fashion only began to appear in the 17th century and later, governments as early as Han dynasty China made use of regularly published news bulletins. These bulletins, however, were intended only for government officials, and thus were not journalistic news publications in the modern sense of the term.</p>
-
-            <p>Journalism in China before 1910 primarily served the international community. The overthrow of the old imperial regime in 1911 produced a surge in Chinese nationalism, an end to censorship, and a demand for professional, nation-wide journalism.</p>
-
-            <p>Starting in the 1940s, United States broadcast television channels would air 10-to-15-minute segments of news programming one or two times per evening. The era of live-TV news coverage would begin in the 1960s with the assassination of John F. Kennedy, broadcast and reported to live on a variety of nationally syndicated television channels. During the 60s and 70s, television channels would begin adding regular morning or midday news shows. Starting in 1980 with the establishment of CNN, news channels began providing 24-hour news coverage, a format which persists through today.</p>
-          </div>
         </div>
 
       </div><!-- close container -->
